2014-06-27 Noriki Nakamura <noriki.nakamura@miraclelinux.com> 14.06-2

	[Server] Support Zabbix 2.2 (#186)
	[Client][utils] Check existence of hostId at getHostName() (#185)
	[Client] Make a link to nagios Web UI (#209)
	[Server] Can't update on Zabbix 2.2.0 (#221)
	[Server] The basic implementation of the incident management feature (#229)
	[Server] The basic implementation of the plugin mechanism for 'Arm' (#171)
	[Server] Fix wrong number of bad hosts & triggers of a server (#236)

2014-03-28 Noriki Nakamura <noriki.nakamura@miraclelinux.com> 14.03-4

	[Server][Client] Support Host group  (#27)
	[Server] Add user role (#92)
	[Client] We should consider the default list order of events, triggers, and items. (#7)
	[Server] improve the efficiency to ignore lower level messages in mlpl::Logger (#35)
	[Server] test_getEventWithMaximumNumberAscendingStartId() crashes rarely (#81)
	[Server] Propagate access control feature to remaining APIs (#99)
	[Client] Error messages of hatohol-server are unfriendly (#100)
	[Server] Support a user privilege on action functions (#102)
	[Client] Some piecies of information on "Dashboard" page seems incorrect (#104)
	[Client] index.html and "viewer" prefix are verbose (#105)
	[Client] Support pagination (#106)
	[Server] SessionId should be expired (#108)
	[Server][ActionManager] Check the existence of user before an action is excuted. (#109)
	[Server] Enable to edit existing monitoring-server configuration (#117)
	[Client] Wrong users are deleted on deleting users (#118)
	[Client] "Add" button of HatholServerEditDialog doesn't become enabled in spite of filling all entries (#119)
	[Client] Server edit dialog is too long vertically (#121)
	[Client] Cannot register a multi-byte nickname for a monitoring-server (#122)
	[Client] Links to zabbix pages are broken when the port of monitoring-server isn't 80 (#123)
	[Client] Pull down menu of "Hosts" filter isn't cleared when clear server filter (#127)