@@ -149,6 +149,14 @@ rm -rf %{buildroot}
 %{_libdir}/pkgconfig/*.pc
 
 %changelog
+* Wed Jul 23 2014 Noriki Nakamura <noriki.nakamura@miraclelinux.com> 14.09-1
+- [Server] Introduce the pagination feature to TriggersView and LatestView (#246)
+- [Server] Use auto mutex (#255)
+- [Server] Add more tests for action & issue sender (#256)
+- [Server] Add a new query option "type" to the rest resource "action" (#257)
+- [Server] Add operation privilege types for issue settings (#264)
+- [Server] Can't get Event data (#252)
+
 * Fri Jun 27 2014 Noriki Nakamura <noriki.nakamura@miraclelinux.com> 14.06-2
 - [Server] Support Zabbix 2.2 (#186)
 - [Client][utils] Check existence of hostId at getHostName() (#185)
@@ -157,6 +165,7 @@ rm -rf %{buildroot}
 - [Server] The basic implementation of the incident management feature (#229)
 - [Server] The basic implementation of the plugin mechanism for 'Arm' (#171)
 - [Server] Fix wrong number of bad hosts & triggers of a server (#236)
+
 * Fri Mar 28 2014 Noriki Nakamura <noriki.nakamura@miraclelinux.com> 14.03-4
 - [Server][Client] Support Host group  (#27)
 - [Server] Add user role (#92)
